--- a/Project.ipynb
+++ b/Project.ipynb
@@ -49,6 +49,38 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "54630868",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#future improvements: test random fitnesses to set a baseline average to compare our results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a3db52db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#No swap mutation within the same table"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "649bc570",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "### <span style=\"color:#96d9f0;\">1. Imports</span>\n",
+    "\n",
+    "This section includes all the necessary library imports required for the development of the project. We also use the library provided during the practical classes, as recommended, to support the implementation. Additionally, the relationship matrix used for evaluating guest compatibility is imported here."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "9af4382a",
    "metadata": {},
    "outputs": [],
@@ -59,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "613c9a75",
    "metadata": {},
    "outputs": [],
@@ -74,27 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "54630868",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#future improvements: test random fitnesses to set a baseline average to compare our results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "a3db52db",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#No swap mutation within the same table"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "21f32475",
    "metadata": {},
    "outputs": [
@@ -442,25 +454,36 @@
        "[64 rows x 64 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Import csv\n",
-    "import csv\n",
-    "import os\n",
-    "import pandas as pd\n",
+    "# Import the relationship matrix\n",
     "\n",
     "relationship_matrix = pd.read_csv('data/seating_data.csv')\n",
     "relationship_matrix.drop(columns='idx', inplace=True)\n",
-    "relationship_matrix "
+    "relationship_matrix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af2cdc61",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "### <span style=\"color:#96d9f0;\">2. Solution Representation</span>\n",
+    "\n",
+    "In this section, we define the Wedding Sitting Solution class (`WSSolution`), which extends the base `Solution` class provided in the practical classes. This class represents a candidate solution for the wedding seating optimization problem.\n",
+    "\n",
+    "Each solution consists of a list of tables, where each table is a list of guest indices. The class includes methods to generate a valid random initial representation and to evaluate the fitness of a solution based on the total relationship scores between guests seated at the same table."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "id": "c37f1d3c",
    "metadata": {},
    "outputs": [],
@@ -503,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "id": "a2c383b8",
    "metadata": {},
    "outputs": [
@@ -511,16 +534,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random solution: [[17, 48, 63, 16, 23, 58, 3, 57], [31, 42, 44, 27, 11, 38, 15, 7], [52, 47, 30, 10, 28, 39, 13, 36], [35, 1, 20, 5, 62, 41, 21, 19], [61, 9, 26, 40, 49, 33, 53, 25], [29, 0, 43, 18, 56, 24, 51, 46], [6, 4, 2, 14, 55, 34, 59, 45], [8, 12, 50, 54, 60, 22, 37, 32]]\n",
-      "Table 1: Fitness: 300\n",
-      "Table 2: Fitness: 0\n",
-      "Table 3: Fitness: 0\n",
-      "Table 4: Fitness: 500\n",
+      "Random solution: [[20, 48, 47, 40, 63, 31, 27, 39], [21, 58, 38, 62, 56, 55, 4, 14], [61, 0, 60, 46, 30, 16, 41, 22], [8, 13, 24, 12, 19, 17, 54, 1], [59, 11, 5, 2, 36, 52, 35, 29], [25, 3, 37, 23, 49, 18, 45, 34], [32, 43, 6, 42, 51, 10, 9, 57], [33, 28, 7, 50, 53, 26, 15, 44]]\n",
+      "Table 1: Fitness: 0\n",
+      "Table 2: Fitness: 100\n",
+      "Table 3: Fitness: 100\n",
+      "Table 4: Fitness: 400\n",
       "Table 5: Fitness: 0\n",
-      "Table 6: Fitness: 200\n",
-      "Table 7: Fitness: 300\n",
-      "Table 8: Fitness: 0\n",
-      "Total Fitness: 1300\n"
+      "Table 6: Fitness: 0\n",
+      "Table 7: Fitness: 100\n",
+      "Table 8: Fitness: 500\n",
+      "Total Fitness: 1200\n"
      ]
     }
    ],
@@ -530,107 +553,11 @@
     "print('Random solution:', solution)\n",
     "print('Total Fitness:', solution.fitness())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "94023487",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "645892a3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "45031739",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "29f03f0c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8c2717b9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9bcc13bd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "91cffd94",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "121dc03b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6d2eda4d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e8a930cc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4786e667",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "749aaee0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "CIFO",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -644,7 +571,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
