--- a/Project.ipynb
+++ b/Project.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "9af4382a",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "613c9a75",
    "metadata": {},
    "outputs": [],
@@ -101,12 +101,14 @@
     "from library.solution import Solution\n",
     "import csv\n",
     "import os\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from itertools import combinations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "21f32475",
    "metadata": {},
    "outputs": [
@@ -454,17 +456,48 @@
        "[64 rows x 64 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Import the relationship matrix\n",
+    "# Import the relationship matrix as a pandas dataframe for visualization\n",
     "\n",
-    "relationship_matrix = pd.read_csv('data/seating_data.csv')\n",
-    "relationship_matrix.drop(columns='idx', inplace=True)\n",
-    "relationship_matrix"
+    "relationship_matrix_df = pd.read_csv('data/seating_data.csv')\n",
+    "relationship_matrix_df.drop(columns='idx', inplace=True)\n",
+    "relationship_matrix_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "352cce64",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[   0., 5000.,    0., ...,    0.,    0.,    0.],\n",
+       "       [5000.,    0.,  700., ...,    0.,    0.,    0.],\n",
+       "       [   0.,  700.,    0., ...,    0.,    0.,    0.],\n",
+       "       ...,\n",
+       "       [   0.,    0.,    0., ...,    0.,  700.,  700.],\n",
+       "       [   0.,    0.,    0., ...,  700.,    0.,  900.],\n",
+       "       [   0.,    0.,    0., ...,  700.,  900.,    0.]], shape=(64, 64))"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import the relationship matrix as a numpy array\n",
+    "\n",
+    "relationship_matrix = np.loadtxt('data/seating_data.csv', delimiter=',', skiprows=1)\n",
+    "relationship_matrix = relationship_matrix[ : , 1:]\n",
+    "relationship_matrix "
    ]
   },
   {
@@ -483,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "c37f1d3c",
    "metadata": {},
    "outputs": [],
@@ -512,21 +545,19 @@
     "    \n",
     "    def fitness(self):\n",
     "        total_happiness = 0\n",
-    "        for i in range(len(self.repr)):\n",
+    "        for i, row in enumerate(self.repr):\n",
     "            table_happiness = 0\n",
-    "\n",
-    "            # Calculate happiness for each table    \n",
-    "            for j in range(len(self.repr[i])-1):\n",
-    "                table_happiness += self.relationship_matrix.iloc[self.repr[i][j], self.repr[i][j + 1]]\n",
-    "            print(f\"Table {i+1}: Fitness: {table_happiness}\")\n",
+    "            combs = list(combinations(row, 2))\n",
+    "            pair_scores = [self.relationship_matrix[a, b] for a, b in combs]\n",
+    "            table_happiness = sum(s for s in pair_scores)\n",
     "            total_happiness += table_happiness\n",
-    "            \n",
+    "        \n",
     "        return total_happiness\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "a2c383b8",
    "metadata": {},
    "outputs": [
@@ -534,16 +565,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random solution: [[20, 48, 47, 40, 63, 31, 27, 39], [21, 58, 38, 62, 56, 55, 4, 14], [61, 0, 60, 46, 30, 16, 41, 22], [8, 13, 24, 12, 19, 17, 54, 1], [59, 11, 5, 2, 36, 52, 35, 29], [25, 3, 37, 23, 49, 18, 45, 34], [32, 43, 6, 42, 51, 10, 9, 57], [33, 28, 7, 50, 53, 26, 15, 44]]\n",
-      "Table 1: Fitness: 0\n",
-      "Table 2: Fitness: 100\n",
-      "Table 3: Fitness: 100\n",
-      "Table 4: Fitness: 400\n",
-      "Table 5: Fitness: 0\n",
-      "Table 6: Fitness: 0\n",
-      "Table 7: Fitness: 100\n",
-      "Table 8: Fitness: 500\n",
-      "Total Fitness: 1200\n"
+      "Random solution: [[40, 39, 57, 9, 28, 6, 15, 19], [16, 52, 11, 44, 47, 31, 8, 48], [42, 63, 4, 45, 7, 33, 2, 13], [5, 60, 14, 56, 50, 59, 22, 58], [51, 34, 43, 36, 29, 27, 32, 25], [20, 46, 10, 23, 26, 3, 49, 55], [30, 24, 1, 18, 37, 38, 62, 17], [12, 53, 41, 54, 21, 61, 35, 0]]\n",
+      "Total Fitness: 5200.0\n"
      ]
     }
    ],
@@ -552,6 +575,216 @@
     "\n",
     "print('Random solution:', solution)\n",
     "print('Total Fitness:', solution.fitness())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86839dc1",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "### <span style=\"color:#96d9f0;\">3. Selection Algorithms</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "060e6427",
+   "metadata": {},
+   "source": [
+    "#### Fitness Proportionate Selection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9aad8dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Code (aula)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec68684f",
+   "metadata": {},
+   "source": [
+    "#### Ranking Selection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a7333bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c9efbe9",
+   "metadata": {},
+   "source": [
+    "#### Tournament Selection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "9c5e81ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tournament_selection(population, k=3):\n",
+    "    competitors = random.sample(population, k)\n",
+    "    return max(competitors, key=lambda ind: ind.fitness())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c059ee43",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "### <span style=\"color:#96d9f0;\">4. Crossovers</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6434b35c",
+   "metadata": {},
+   "source": [
+    "#### Standard Crossover"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27873c31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Code (aula)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76ce6eb8",
+   "metadata": {},
+   "source": [
+    "#### Partially Matched Crossover"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60f01497",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ef53180",
+   "metadata": {},
+   "source": [
+    "#### Order Preserving Crossover"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "904bbec6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "579b3cd1",
+   "metadata": {},
+   "source": [
+    "#### Group Preserving Crossover"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9d88182",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45b78edb",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "### <span style=\"color:#96d9f0;\">5. Mutations</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86fa1df5",
+   "metadata": {},
+   "source": [
+    "#### Swap Mutation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc9936db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Swap mutation implementation that swaps two random people between two different tables and does not allow swapping within the same table\n",
+    "\n",
+    "def swap_mutation(solution, mut_prob):\n",
+    "    if random.random() < mut_prob:\n",
+    "        tables = solution.repr\n",
+    "        if len(tables) < 2:\n",
+    "            return\n",
+    "\n",
+    "        # Pick two random tables\n",
+    "        t1, t2 = random.sample(range(len(tables)), 2)\n",
+    "        if not tables[t1] or not tables[t2]:\n",
+    "            return\n",
+    "\n",
+    "        # Swap one person from each\n",
+    "        i1 = random.randint(0, len(tables[t1]) - 1)\n",
+    "        i2 = random.randint(0, len(tables[t2]) - 1)\n",
+    "        tables[t1][i1], tables[t2][i2] = tables[t2][i2], tables[t1][i1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d32b3814",
+   "metadata": {},
+   "source": [
+    "#### New Creative Mutation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51e186b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Code"
    ]
   }
  ],
