--- a/Project.ipynb
+++ b/Project.ipynb
@@ -602,7 +602,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code (aula)"
+    "# Code (Afonso)"
    ]
   },
   {
@@ -668,7 +668,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code (aula)"
+    "# Code (Afonso)"
    ]
   },
   {
@@ -784,7 +784,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code"
+    "# Code (Afonso)"
    ]
   }
  ],
