--- a/Project.ipynb
+++ b/Project.ipynb
@@ -620,7 +620,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code"
+    "# Code (Isa)"
    ]
   },
   {
@@ -686,7 +686,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code"
+    "# Code (Isa)"
    ]
   },
   {
@@ -704,7 +704,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code"
+    "# Code (Rita)"
    ]
   },
   {
@@ -722,7 +722,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code"
+    "# Code (Pedro)"
    ]
   },
   {
