--- a/Project_update.ipynb
+++ b/Project_update.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "613c9a75",
    "metadata": {},
    "outputs": [],
@@ -105,8 +105,7 @@
     "import numpy as np\n",
     "from itertools import combinations\n",
     "from typing import Callable\n",
-    "from library.algorithms.genetic_algorithms.algorithm import get_best_ind\n",
-    "from library.algorithms.genetic_algorithms.mutation import inversion_mutation"
+    "from library.algorithms.genetic_algorithms.algorithm import get_best_ind"
    ]
   },
   {
@@ -1283,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "32cfa743-9387-43d0-8b3e-1207db248fbf",
    "metadata": {},
    "outputs": [],
@@ -1332,7 +1331,7 @@
     "    offspring1 = WSSolution(repr=child1_repr, nr_of_tables=parent1.nr_of_tables)\n",
     "    offspring2 = WSSolution(repr=child2_repr, nr_of_tables=parent2.nr_of_tables)\n",
     "\n",
-    "    return offspring1, offspring2\n"
+    "    return offspring1, offspring2"
    ]
   },
   {
@@ -1504,58 +1503,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "45a116da",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def inversion_mutation_seating_Afonso(individual: WSSolution, mut_prob):\n",
-    "    tables = individual.repr  # Access the 8x8 seating arrangement\n",
-    "\n",
-    "    # Flatten the 8x8 seating into a list of 64 guests\n",
-    "    flat = [guest for table in tables for guest in table]\n",
-    "\n",
-    "    # Apply inversion mutation\n",
-    "    mutated_flat = inversion_mutation(flat, mut_prob)\n",
-    "\n",
-    "    # Reshape back to 8 tables of 8\n",
-    "    new_tables = [mutated_flat[i:i+8] for i in range(0, 64, 8)]\n",
-    "\n",
-    "    # Return a new WSSolution with the mutated tables\n",
-    "    return WSSolution(repr=new_tables)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "fc8cdcb4",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Original solution: [[44, 15, 4, 19, 24, 55, 8, 50], [25, 35, 46, 18, 5, 34, 7, 2], [41, 12, 16, 60, 32, 54, 58, 3], [26, 62, 47, 30, 28, 11, 14, 0], [9, 27, 21, 1, 40, 31, 43, 61], [51, 10, 48, 17, 38, 23, 6, 22], [20, 33, 29, 13, 56, 39, 59, 36], [53, 45, 49, 63, 37, 42, 52, 57]]\n",
-      "Mutated solution: [[44, 15, 4, 19, 24, 55, 8, 50], [25, 34, 5, 18, 46, 35, 7, 2], [41, 12, 16, 60, 32, 54, 58, 3], [26, 62, 47, 30, 28, 11, 14, 0], [9, 27, 21, 1, 40, 31, 43, 61], [51, 10, 48, 17, 38, 23, 6, 22], [20, 33, 29, 13, 56, 39, 59, 36], [53, 45, 49, 63, 37, 42, 52, 57]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "solution = WSSolution()\n",
-    "\n",
-    "mutated_solution = inversion_mutation_seating_Afonso(solution, 1) # Meti a probabilidade de mutação = 1 para garantir que a mutação acontece e ver se funciona\n",
-    "print('Original solution:', solution)\n",
-    "print('Mutated solution:', mutated_solution)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "bf2a045d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def inversion_mutation_seating_Rita(individual: WSSolution, mut_prob):\n",
+    "def inversion_mutation_seating(individual: WSSolution, mut_prob):\n",
     "    # Access the seating arrangement (8 tables with guests)\n",
     "    tables = individual.repr\n",
     "\n",
@@ -1584,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "0f9cdfc1",
    "metadata": {},
    "outputs": [
@@ -1600,7 +1553,7 @@
    "source": [
     "solution = WSSolution()\n",
     "\n",
-    "mutated_solution = inversion_mutation_seating_Rita(solution, 1) # Meti a probabilidade de mutação = 1 para garantir que a mutação acontece e ver se funciona\n",
+    "mutated_solution = inversion_mutation_seating(solution, 1) # Meti a probabilidade de mutação = 1 para garantir que a mutação acontece e ver se funciona\n",
     "print('Original solution:', solution)\n",
     "print('Mutated solution:', mutated_solution)"
    ]
@@ -1758,7 +1711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "id": "d30f9bca-3bc5-4b0c-bf30-9eacd2ec7d3c",
    "metadata": {},
    "outputs": [
@@ -1766,14 +1719,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " There are 18165723931630806756964027928179555634194028454000000 different seating arrangements and it would take around 6.912375925278085e+40 years for a computer to compare all the solutions and find the best.\n"
+      " There are 4.505387879868752e+47 different seating arrangements and it would take around 1.7143789497217472e+36 years for a computer to compare all the solutions and find the best.\n"
      ]
     }
    ],
    "source": [
     "import math\n",
     "\n",
-    "total_combinations = math.comb(64,8)*math.comb(56,8)*math.comb(48, 8)*math.comb(40, 8)*math.comb(32, 8)*math.comb(24, 8)*math.comb(16,8) \n",
+    "total_combinations = (math.comb(64,8)*math.comb(56,8)*math.comb(48, 8)*math.comb(40, 8)*math.comb(32, 8)*math.comb(24, 8)*math.comb(16,8)) / math.factorial(8)\n",
     "minutes_taken = total_combinations * 2 / 1000000\n",
     "years_taken = minutes_taken/(60*24*365) \n",
     "\n",
@@ -2069,7 +2022,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2083,7 +2036,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
