--- a/Project_Wilcoxon.ipynb
+++ b/Project_Wilcoxon.ipynb
@@ -2171,7 +2171,7 @@
     "    (\"Config 5\", np.array(fitness_evolution_per_config[4]).mean(axis=0).tolist())\n",
     "]\n",
     "\n",
-    "# Optional: print results for inspection\n",
+    "# Print results\n",
     "for config_name, avg_fitness in results:\n",
     "    print(f\"{config_name} average fitness:\", avg_fitness)"
    ]
