--- a/Project_Wilcoxon.ipynb
+++ b/Project_Wilcoxon.ipynb
@@ -48,12 +48,78 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0c57ee6c",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "<a id=\"toc\"></a>\n",
+    "\n",
+    "<h2 style=\"color:#96d9f0;\">Table of Contents</h2>\n",
+    "\n",
+    "<ul style=\"list-style-type:none; padding-left:0;\">\n",
+    "  <li><span style=\"color:#96d9f0;\">1.</span> <a href=\"#chapter1\">Imports</a></li>\n",
+    "\n",
+    "  <li><span style=\"color:#96d9f0;\">2.</span> <a href=\"#chapter2\">Solution Representation</a></li>\n",
+    "\n",
+    "  <li><span style=\"color:#96d9f0;\">3.</span> <a href=\"#chapter3\">Selection Algorithms</a>\n",
+    "    <ul>\n",
+    "      <li><a href=\"#chapter3_1\">3.1 Fitness Proportionate Selection</a></li>\n",
+    "      <li><a href=\"#chapter3_2\">3.2 Ranking Selection</a></li>\n",
+    "      <li><a href=\"#chapter3_3\">3.3 Tournament Selection</a></li>\n",
+    "    </ul>\n",
+    "  </li>\n",
+    "\n",
+    "  <li><span style=\"color:#96d9f0;\">4.</span> <a href=\"#chapter4\">Crossover Operators</a>\n",
+    "    <ul>\n",
+    "      <li><a href=\"#chapter4_1\">4.1 Custom Crossover Operator</a></li>\n",
+    "      <li><a href=\"#chapter4_2\">4.2 Partially Matched Crossover</a></li>\n",
+    "      <li><a href=\"#chapter4_3\">4.3 Order Crossover</a></li>\n",
+    "    </ul>\n",
+    "  </li>\n",
+    "\n",
+    "  <li><span style=\"color:#96d9f0;\">5.</span> <a href=\"#chapter5\">Mutation Operators</a>\n",
+    "    <ul>\n",
+    "      <li><a href=\"#chapter5_1\">5.1 Swap Mutation</a></li>\n",
+    "      <li><a href=\"#chapter5_2\">5.2 Inversion Mutation</a></li>\n",
+    "      <li><a href=\"#chapter5_3\">5.3 Scramble Mutation</a></li>\n",
+    "    </ul>\n",
+    "  </li>\n",
+    "\n",
+    "  <li><span style=\"color:#96d9f0;\">6.</span> <a href=\"#chapter6\">Genetic Algorithm</a>\n",
+    "    <ul>\n",
+    "      <li><a href=\"#chapter6_1\">6.1 Grid Search</a></li>\n",
+    "      <li><a href=\"#chapter6_1_1_\">6.1.1 Probabilities Specific Grid Search</a></li>\n",
+    "      <li><a href=\"#chapter6_2\">6.2 Fitness Evolution Analysis</a></li>\n",
+    "    </ul>\n",
+    "  </li>\n",
+    "\n",
+    "  <li><span style=\"color:#96d9f0;\">7.</span> <a href=\"#chapter7\">Statistics Tests</a>\n",
+    "    <ul>\n",
+    "      <li><a href=\"#chapter7_1\">7.1 Wilcoxon</a></li>\n",
+    "    </ul>\n",
+    "  </li>\n",
+    "\n",
+    "  <li><span style=\"color:#96d9f0;\">8.</span> <a href=\"#chapter8\">Algorithm Testing</a></li>\n",
+    "\n",
+    "  <li><span style=\"color:#96d9f0;\">9.</span> <a href=\"#chapter9\">Hill Climbing / Simulated Annealing</a></li>\n",
+    "\n",
+    "  <li><span style=\"color:#96d9f0;\">10.</span> <a href=\"#chapter10\">Algorithms Comparison</a></li>\n",
+    "    </ul>\n",
+    "      <li><a href=\"#chapter10_1\">10.1 Hill Climbing</a></li>\n",
+    "      <li><a href=\"#chapter10_2\">10.2. Statistics Test - Wilcoxon</a></li>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "649bc570",
    "metadata": {},
    "source": [
     "---\n",
     "\n",
-    "### <span style=\"color:#96d9f0;\">1. Imports</span>\n",
+    "<h2 id=\"chapter1\" style=\"color:#96d9f0;\">1. Imports</h2>\n",
+    "<p><a href=\"#toc\" style=\"color:#96d9f0;\">⟵ Back to Table of Contents</a></p>\n",
+    "\n",
     "\n",
     "This section includes all the necessary library imports required for the development of the project. We also use the library provided during the practical classes, as recommended, to support the implementation. Additionally, the relationship matrix used for evaluating guest compatibility is imported here."
    ]
@@ -496,7 +562,8 @@
    "source": [
     "---\n",
     "\n",
-    "### <span style=\"color:#96d9f0;\">2. Solution Representation</span>\n",
+    "<h2 id=\"chapter2\" style=\"color:#96d9f0;\">2. Solution Representation</h2>\n",
+    "<p><a href=\"#toc\" style=\"color:#96d9f0;\">⟵ Back to Table of Contents</a></p>\n",
     "\n",
     "In this section, we define the Wedding Sitting Solution class (`WSSolution`), which extends the base `Solution` class provided in the practical classes. This class represents a candidate solution for the wedding seating optimization problem.\n",
     "\n",
@@ -581,8 +648,18 @@
    "metadata": {},
    "source": [
     "---\n",
-    "\n",
-    "### <span style=\"color:#96d9f0;\">3. Selection Algorithms</span>"
+    "<h2 id=\"chapter3\" style=\"color:#96d9f0;\">3. Selection Algorithms</h2>\n",
+    "<p><a href=\"#toc\" style=\"color:#96d9f0;\">⟵ Back to Table of Contents</a></p>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f37024e3",
+   "metadata": {},
+   "source": [
+    "<h3 id=\"chapter3_1\">3.1. Fitness Proportionate Selection</h3>\n",
+    "<p><a href=\"#toc\" style=\"color:#FFFFFF;\">⟵ Back to Table of Contents</a></p>\n"
    ]
   },
   {
@@ -590,8 +667,6 @@
    "id": "060e6427",
    "metadata": {},
    "source": [
-    "#### 3.1. Fitness Proportionate Selection\n",
-    "\n",
     "In a typical **fitness proportionate selection** (also known as **roulette wheel selection**), individuals are selected based on their fitness values, with higher fitness values having a greater chance of being chosen. In our optimization problem, however, the fitness values can range from **negative** (indicating conflicts) to **positive** (indicating good relationships between guests).\n",
     "\n",
     "To adapt the selection process to handle **negative fitness values**, we introduce the following modifications:\n",
@@ -673,7 +748,8 @@
    "id": "ec68684f",
    "metadata": {},
    "source": [
-    "#### 3.2. Ranking Selection"
+    "<h3 id=\"chapter3_2\">3.2. Ranking Selection</h3>\n",
+    "<p><a href=\"#toc\" style=\"color:#FFFFFF;\">⟵ Back to Table of Contents</a></p>"
    ]
   },
   {
@@ -820,7 +896,8 @@
    "id": "7c9efbe9",
    "metadata": {},
    "source": [
-    "#### 3.3. Tournament Selection"
+    "<h3 id=\"chapter3_3\">3.3. Tournament Selection</h3>\n",
+    "<p><a href=\"#toc\" style=\"color:#FFFFFF;\">⟵ Back to Table of Contents</a></p>"
    ]
   },
   {
@@ -932,8 +1009,17 @@
    "metadata": {},
    "source": [
     "---\n",
-    "\n",
-    "### <span style=\"color:#96d9f0;\">4. Crossover Operators</span>"
+    "<h2 id=\"chapter4\" style=\"color:#96d9f0;\">4. Crossover Operators</h2>\n",
+    "<p><a href=\"#toc\" style=\"color:#96d9f0;\">⟵ Back to Table of Contents</a></p>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f4ca31f",
+   "metadata": {},
+   "source": [
+    "<h3 id=\"chapter4_1\">4.1.  Custom Crossover Operator</h3>\n",
+    "<p><a href=\"#toc\" style=\"color:#FFFFFF;\">⟵ Back to Table of Contents</a></p>"
    ]
   },
   {
@@ -941,7 +1027,7 @@
    "id": "6434b35c",
    "metadata": {},
    "source": [
-    "#### 4.1. Custom Crossover Operator (`table_level_crossover`)\n",
+    "`table_level_crossover`\n",
     "\n",
     "In this section, we implement a custom crossover operator tailored to the constraints of our optimization problem. Unlike standard one-point crossover, which is suitable for flat representations, our solution requires a structured approach:\n",
     "\n",
@@ -1100,7 +1186,8 @@
    "id": "76ce6eb8",
    "metadata": {},
    "source": [
-    "#### 4.2. Partially Matched Crossover"
+    "<h3 id=\"chapter4_2\">4.2.  Partially Matched Crossover</h3>\n",
+    "<p><a href=\"#toc\" style=\"color:#FFFFFF;\">⟵ Back to Table of Contents</a></p>"
    ]
   },
   {
@@ -1255,7 +1342,8 @@
    "id": "579b3cd1",
    "metadata": {},
    "source": [
-    "#### 4.3. Order Crossover"
+    "<h3 id=\"chapter4_3\">4.3. Order Crossover</h3>\n",
+    "<p><a href=\"#toc\" style=\"color:#FFFFFF;\">⟵ Back to Table of Contents</a></p>"
    ]
   },
   {
@@ -1401,8 +1489,17 @@
    "metadata": {},
    "source": [
     "---\n",
-    "\n",
-    "### <span style=\"color:#96d9f0;\">5. Mutation Operators</span>"
+    "<h2 id=\"chapter5\" style=\"color:#96d9f0;\">5. Mutation Operators</h2>\n",
+    "<p><a href=\"#toc\" style=\"color:#96d9f0;\">⟵ Back to Table of Contents</a></p>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99c027df",
+   "metadata": {},
+   "source": [
+    "<h3 id=\"chapter5_1\">5.1.  Swap Mutation</h3>\n",
+    "<p><a href=\"#toc\" style=\"color:#FFFFFF;\">⟵ Back to Table of Contents</a></p>"
    ]
   },
   {
@@ -1410,8 +1507,6 @@
    "id": "86fa1df5",
    "metadata": {},
    "source": [
-    "#### 5.1. Swap Mutation\n",
-    "\n",
     "The swap mutation operator introduces random changes to the seating arrangement by swapping two guests between different tables.\n",
     "\n",
     "It's important to note that swapping two guests within the same table would not create any new configuration - it would simply result in the same solution as before. Since we want to introduce meaningful changes, the swap mutation ensures that the two guests are always swapped between different tables. This prevents the mutation from generating an invalid or identical solution.\n",
@@ -1475,11 +1570,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c9f9de7a",
+   "metadata": {},
+   "source": [
+    "<h3 id=\"chapter5_2\">5.2.  Inversion Mutation</h3>\n",
+    "<p><a href=\"#toc\" style=\"color:#FFFFFF;\">⟵ Back to Table of Contents</a></p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7fcabf85",
    "metadata": {},
    "source": [
-    "#### 5.2. Inversion Mutation\n",
-    "\n",
     "The inversion mutation operator introduces variation by selecting a random segment of the seating plan and reversing the order of guests within that segment.\n",
     "\n",
     "Since the seating arrangement is represented as a list of tables, the entire structure is first flattened into a single list containing all guests. The inversion is then performed on a random sublist, effectively inverting a continuous sequence of guests. After the inversion, the list is reshaped back into the original table format.\n",
@@ -1549,7 +1651,8 @@
    "id": "d32b3814",
    "metadata": {},
    "source": [
-    "#### 5.3. Scramble Mutation"
+    "<h3 id=\"chapter5_3\">5.3.  Scramble Mutation</h3>\n",
+    "<p><a href=\"#toc\" style=\"color:#FFFFFF;\">⟵ Back to Table of Contents</a></p>"
    ]
   },
   {
@@ -1641,8 +1744,8 @@
    "metadata": {},
    "source": [
     "---\n",
-    "\n",
-    "### <span style=\"color:#96d9f0;\">6. Genetic Algorithm</span>"
+    "<h2 id=\"chapter6\" style=\"color:#96d9f0;\">6. Genetic Algorithm</h2>\n",
+    "<p><a href=\"#toc\" style=\"color:#96d9f0;\">⟵ Back to Table of Contents</a></p>\n"
    ]
   },
   {
@@ -1734,7 +1837,8 @@
    "id": "a9abbe5b",
    "metadata": {},
    "source": [
-    "#### 6.1. Grid Search"
+    "<h3 id=\"chapter6_1\">6.1.  Grid Search</h3>\n",
+    "<p><a href=\"#toc\" style=\"color:#FFFFFF;\">⟵ Back to Table of Contents</a></p>"
    ]
   },
   {
@@ -1812,7 +1916,8 @@
    "id": "d1cead51",
    "metadata": {},
    "source": [
-    "#### 6.1.1. Probabilities Specific Grid Search"
+    "<h4 id=\"chapter6_1_1_\">6.1.1. Probabilities Specific Grid Search</h4>\n",
+    "<p><a href=\"#toc\" style=\"color:#FFFFFF;\">⟵ Back to Table of Contents</a></p>"
    ]
   },
   {
@@ -1943,7 +2048,8 @@
    "id": "735490e9",
    "metadata": {},
    "source": [
-    "#### 6.2. Fitness Evolution Analysis"
+    "<h3 id=\"chapter6_2\">6.2. Fitness Evolution Analysis</h3>\n",
+    "<p><a href=\"#toc\" style=\"color:#FFFFFF;\">⟵ Back to Table of Contents</a></p>"
    ]
   },
   {
@@ -2138,8 +2244,8 @@
    "metadata": {},
    "source": [
     "---\n",
-    "\n",
-    "### <span style=\"color:#96d9f0;\">7. Statistics Tests</span>"
+    "<h2 id=\"chapter7\" style=\"color:#96d9f0;\">7. Statistics Tests</h2>\n",
+    "<p><a href=\"#toc\" style=\"color:#96d9f0;\">⟵ Back to Table of Contents</a></p>\n"
    ]
   },
   {
@@ -2147,7 +2253,8 @@
    "id": "54cc076d",
    "metadata": {},
    "source": [
-    "### 7.1. Wilcoxon"
+    "<h3 id=\"chapter7_1\">7.1. Wilcoxon</h3>\n",
+    "<p><a href=\"#toc\" style=\"color:#FFFFFF;\">⟵ Back to Table of Contents</a></p>"
    ]
   },
   {
@@ -2275,8 +2382,8 @@
    "metadata": {},
    "source": [
     "---\n",
-    "\n",
-    "### <span style=\"color:#96d9f0;\">8. Algorithm Testing</span>"
+    "<h2 id=\"chapter8\" style=\"color:#96d9f0;\">8. Algorithm Testing</h2>\n",
+    "<p><a href=\"#toc\" style=\"color:#96d9f0;\">⟵ Back to Table of Contents</a></p>\n"
    ]
   },
   {
@@ -2334,8 +2441,8 @@
    "metadata": {},
    "source": [
     "---\n",
-    "\n",
-    "### <span style=\"color:#96d9f0;\">9. Hill Climbing / Simulated Annealing</span>"
+    "<h2 id=\"chapter9\" style=\"color:#96d9f0;\">9. Hill Climbing / Simulated Annealing</h2>\n",
+    "<p><a href=\"#toc\" style=\"color:#96d9f0;\">⟵ Back to Table of Contents</a></p>"
    ]
   },
   {
@@ -2750,8 +2857,8 @@
    "metadata": {},
    "source": [
     "---\n",
-    "\n",
-    "### <span style=\"color:#96d9f0;\">10. Algorithms Comparison</span>"
+    "<h2 id=\"chapter10\" style=\"color:#96d9f0;\">10. Algorithms Comparison</h2>\n",
+    "<p><a href=\"#toc\" style=\"color:#96d9f0;\">⟵ Back to Table of Contents</a></p>"
    ]
   },
   {
@@ -2921,7 +3028,8 @@
    "id": "a690599a",
    "metadata": {},
    "source": [
-    "### Hill Climbing"
+    "<h3 id=\"chapter10_1\">10.1. Hill Climbing</h3>\n",
+    "<p><a href=\"#toc\" style=\"color:#FFFFFF;\">⟵ Back to Table of Contents</a></p>"
    ]
   },
   {
@@ -2993,7 +3101,8 @@
    "id": "ee9b2fcb",
    "metadata": {},
    "source": [
-    "### Statistics Tests - Wilcoxon"
+    "<h3 id=\"chapter10_2\">10.2. Statistics Tests - Wilcoxon</h3>\n",
+    "<p><a href=\"#toc\" style=\"color:#FFFFFF;\">⟵ Back to Table of Contents</a></p>"
    ]
   },
   {
