aginal é só agora

--- a/Notebook_Group_AW.ipynb
+++ b/Notebook_Group_AW.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c57ee6c",
+   "id": "12f6050d",
    "metadata": {},
    "source": [
     "---\n",
@@ -88,7 +88,7 @@
     "  <li><span style=\"color:#96d9f0;\">6.</span> <a href=\"#chapter6\">Genetic Algorithm</a>\n",
     "    <ul>\n",
     "      <li><a href=\"#chapter6_1\">6.1 Grid Search</a></li>\n",
-    "      <li><a href=\"#chapter6_1_1_\">6.1.1 Probabilities Specific Grid Search</a></li>\n",
+    "      <li><a href=\"#chapter6_1_1\">6.1.1 Probabilities Specific Grid Search</a></li>\n",
     "      <li><a href=\"#chapter6_2\">6.2 Fitness Evolution Analysis</a></li>\n",
     "    </ul>\n",
     "  </li>\n",
@@ -103,11 +103,13 @@
     "\n",
     "  <li><span style=\"color:#96d9f0;\">9.</span> <a href=\"#chapter9\">Hill Climbing / Simulated Annealing</a></li>\n",
     "\n",
-    "  <li><span style=\"color:#96d9f0;\">10.</span> <a href=\"#chapter10\">Algorithms Comparison</a></li>\n",
-    "    </ul>\n",
+    "  <li><span style=\"color:#96d9f0;\">10.</span> <a href=\"#chapter10\">Algorithms Comparison</a>\n",
+    "    <ul>\n",
     "      <li><a href=\"#chapter10_1\">10.1 Hill Climbing</a></li>\n",
-    "      <li><a href=\"#chapter10_2\">10.2. Statistics Test - Wilcoxon</a></li>\n",
-    "\n"
+    "      <li><a href=\"#chapter10_2\">10.2 Statistics Test - Wilcoxon</a></li>\n",
+    "    </ul>\n",
+    "  </li>\n",
+    "</ul>\n"
    ]
   },
   {
