--- a/Notebook_Group_AW_RT.ipynb
+++ b/Notebook_Group_AW_RT.ipynb
@@ -106,8 +106,8 @@
     "  <li><span style=\"color:#96d9f0;\">10.</span> <a href=\"#chapter10\">Algorithms Comparison</a>\n",
     "    <ul>\n",
     "      <li><a href=\"#chapter10_1\">10.1 Hill Climbing</a></li>\n",
-    "      <li><a href=\"#chapter10_2\">10.2 Statistics Test - Wilcoxon</a></li>\n",
     "    </ul>\n",
+    "  <li><span style=\"color:#96d9f0;\">11.</span> <a href=\"#chapter11\">Random Trials</a>\n",
     "  </li>\n",
     "</ul>\n"
    ]
@@ -1551,7 +1551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "5c9985ac",
    "metadata": {},
    "outputs": [
@@ -1567,7 +1567,7 @@
    "source": [
     "solution = WSSolution()\n",
     "\n",
-    "mutated_solution = swap_mutation(solution, 1) # Meti a probabilidade de mutação = 1 para garantir que a mutação acontece e ver se funciona\n",
+    "mutated_solution = swap_mutation(solution, 1) # Set probability to 1 to ensure mutation occurs and check if it works\n",
     "print('Original solution:', solution)\n",
     "print('Mutated solution:', mutated_solution)"
    ]
@@ -1629,7 +1629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "0f9cdfc1",
    "metadata": {},
    "outputs": [
@@ -1645,7 +1645,7 @@
    "source": [
     "solution = WSSolution()\n",
     "\n",
-    "mutated_solution = inversion_mutation_seating(solution, 1) # Meti a probabilidade de mutação = 1 para garantir que a mutação acontece e ver se funciona\n",
+    "mutated_solution = inversion_mutation_seating(solution, 1) # Set probability to 1 to ensure mutation occurs and check if it works\n",
     "print('Original solution:', solution)\n",
     "print('Mutated solution:', mutated_solution)"
    ]
@@ -1721,7 +1721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "7f9b764e-e8f5-4eac-8fe0-02cbf3dad197",
    "metadata": {},
    "outputs": [
@@ -1737,7 +1737,7 @@
    "source": [
     "solution = WSSolution()\n",
     "\n",
-    "mutated_solution = scramble_mutation(solution, 1) # Meti a probabilidade de mutação = 1 para garantir que a mutação acontece e ver se funciona\n",
+    "mutated_solution = scramble_mutation(solution, 1) # Set probability to 1 to ensure mutation occurs and check if it works\n",
     "print('Original solution:', solution)\n",
     "print('Mutated solution:', mutated_solution)"
    ]
@@ -3181,14 +3181,6 @@
     "\n",
     "print(f\" There are {total_combinations} different seating arrangements and it would take around {years_taken} years for a computer to compare all the solutions and find the best.\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eff1e7ba-3b52-4a3c-9967-6d1a8cb9f1cb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
